--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    google-site-verification: google8b765bacd38b99fb.html
+    <meta name="google-site-verification" content="Q_YJrOV6_Ceym3yxwnVP4fkjXAZEPQuT3PoZ4ehKxPE" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aryan's Gaming</title>
