--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aryan's Gaming</title>
+    <meta name="description" content="Aryan gaming book is help you to join together to the person who are like you. You can work together on projects => programing, gaming, animation, game creation. Join Aryan gaming book ">
+    <meta name="keywords" content="aryangamingbook, aryan gaming book, aryans's gaming, aryansgamingbook, aryangaming, gaming, book, aryan,">
+    <meta name="author" content="Aryan kumar">
 
 </head>
 <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@600&display=swap" rel="stylesheet">
