--- a/gaming.html
+++ b/gaming.html
@@ -175,7 +175,7 @@
     <div class="container">
         <h1>Join Now</h1>
 
-        <a href="https://discord.gg/PE4y93"><button>Join</button></a>
+        <a href="https://discord.gg/rR9WUBq"><button>Join</button></a>
 
     </div>
 </body>
