--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aryan gaming book | Join us | share knowledge together</title>
-    <meta name="description" content="Aryan gaming book is help you to join together to the person who are like you. You can work together on projects programing, gaming, animation, game creation">
-    <meta name="keywords" content="aryangamingbook, aryan gaming book, aryans's gaming, aryansgamingbook, aryangaming, gaming, book, aryan,">
+    <meta name="description" content="aryangamingbook is help you to join together to the person who are like you. You can work together on projects programing, gaming, animation, game creation">
+    <meta name="keywords" content="aryangamingbook, aryangamingbook, aryangamingbook, aryangamingbook, aryangamingbook, aryangamingbook">
     <meta name="author" content="Aryan kumar">
 
 </head>
