--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="google-site-verification" content="Q_YJrOV6_Ceym3yxwnVP4fkjXAZEPQuT3PoZ4ehKxPE" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aryan gaming book | Join us | share knowledge together</title>
+    <title>AryanGamingBook | Join us | share knowledge together</title>
     <meta name="description" content="aryangamingbook is help you to join together to the person who are like you. You can work together on projects programing, gaming, animation, game creation">
     <meta name="keywords" content="aryangamingbook, aryangamingbook, aryangamingbook, aryangamingbook, aryangamingbook, aryangamingbook">
     <meta name="author" content="Aryan kumar">
