--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@600&display=swap" rel="stylesheet">
 <link rel="shortcut icon" href="fav.png" type="image/x-icon">
+<strong>aryangamingbook</strong>
 <style>
     /* css reset */
 
