--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>aryangamingbook | Join us | share knowledge together</title>
     <meta name="description" content="aryangamingbook is help you to join together to the person who are like you. You can work together on projects programing, gaming, animation, game creation">
     <meta name="keywords" content="aryangamingbook, aryangamingbook, aryangamingbook, aryangamingbook, aryangamingbook, aryangamingbook">
-    <meta name="author" content="Aryan kumar">
+    <meta name="author" content="aryangamingbook">
+    <strong>aryangamingbook</strong>
 
 </head>
 <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@600&display=swap" rel="stylesheet">
@@ -158,7 +159,7 @@
         <div class="left">
             <img src="logo.png" alt="">
             <div>
-                Aryan Gaming Book
+                aryangamingbook
             </div>
         </div>
 
