--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div class="left">
             <img src="logo.png" alt="">
             <div>
-                aryangamingbook
+                <strong>aryangamingbook</strong>
             </div>
         </div>
 
