--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="aryangamingbook is help you to join together to the person who are like you. You can work together on projects programing, gaming, animation, game creation">
     <meta name="keywords" content="aryangamingbook, aryangamingbook, aryangamingbook, aryangamingbook, aryangamingbook, aryangamingbook">
     <meta name="author" content="aryangamingbook">
+    <link rel="canonical"https://technicave.github.io/aryangamingbook/">
     
 
 </head>
