--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="aryangamingbook, aryangamingbook, aryangamingbook, aryangamingbook, aryangamingbook, aryangamingbook">
     <meta name="author" content="aryangamingbook">
     <link rel="canonical"https://technicave.github.io/aryangamingbook/">
-    
+    <link rel="shortcut icon" href="/path/to/fav.png">
 
 </head>
 <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@600&display=swap" rel="stylesheet">
